# napari-ome-zarr

./: .isort.cfg  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  napari.yaml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: test_and_deploy.yml
.napari/: DESCRIPTION.md
docs/: conf.py  index.rst
napari_ome_zarr/: __init__.py  _reader.py  _widgets.py  napari.yaml  ome_zarr_reader.py  ome_zarr_writer.py  plate.py  table_utils.py
napari_ome_zarr/_tests/: test_dock_widget.py  test_function.py  test_reader.py  test_writer.py
