[metadata]
name = napari-ome-zarr

author = OME Team
author_email = ome-team@openmicroscopy.org
license = BSD-3
url = https://github.com/ome/napari-ome-zarr
description = A reader for zarr backed OME-NGFF images.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/ome/napari-ome-zarr/issues
    Documentation = https://github.com/ome/napari-ome-zarr#README.md
    Source Code = https://github.com/ome/napari-ome-zarr
    User Support = https://github.com/ome/napari-ome-zarr/issues
    Twitter = https://twitter.com/openmicroscopy

[options]
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    ome-zarr==0.3a1
    numpy


[options.entry_points] 
napari.plugin = 
    napari-ome-zarr = napari_ome_zarr
