[metadata]
name = napari-ome-zarr
author = OME Team
author_email = ome-team@openmicroscopy.org
license = BSD-3
url = https://github.com/ome/napari-ome-zarr
description = A reader for zarr backed OME-NGFF images.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
	Development Status :: 4 - Beta
	Intended Audience :: Developers
	Framework :: napari
	Topic :: Software Development :: Testing
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
	Operating System :: OS Independent
	License :: OSI Approved :: BSD License
project_urls =
	Bug Tracker = https://github.com/ome/napari-ome-zarr/issues
	Documentation = https://github.com/ome/napari-ome-zarr#README.md
	Source Code = https://github.com/ome/napari-ome-zarr
	User Support = https://github.com/ome/napari-ome-zarr/issues
	Twitter = https://twitter.com/openmicroscopy

[options]
packages = find:
python_requires = >=3.9
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
	zarr==v3.0.0-beta.3
	numpy
	vispy
	napari>=0.4.13
include_package_data = True

[options.entry_points]
napari.manifest =
	napari-ome-zarr = napari_ome_zarr:napari.yaml

[options.package_data]
napari_ome_zarr = napari.yaml
