[options]
packages = find:
python_requires = >=3.9
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
	ome-zarr>=0.13.0
	numpy
	vispy
	napari>=0.4.13
include_package_data = True

[options.entry_points]
napari.manifest =
	napari-ome-zarr = napari_ome_zarr:napari.yaml

[options.package_data]
napari_ome_zarr = napari.yaml
